Source/WebCore/accessibility/AccessibilityRenderObject.cpp
@@ -2593,7 +2593,7 @@ AccessibilityRole AccessibilityRenderObject::determineAccessibilityRole()
         return SVGRootRole;
     
     if (isStyleFormatGroup())
-        return GroupRole;
+        return is<RenderInline>(*m_renderer) ? InlineRole : GroupRole;
     
 #if ENABLE(MATHML)
     if (node && node->hasTagName(MathMLNames::mathTag))
